# Parallel-Lattice-Boltzmann-SYCL

./: CMakeLists.txt  README.md
cmake/sycl/: FindComputeCpp.cmake  FindDPCPP.cmake
src/: CMakeLists.txt  FindDPCPP.cmake  flowAroundCylinder.ini  main.cpp
src/lbm/: CMakeLists.txt  LBMParams.cpp  LBMParams.h  LBMSolver.cpp  LBMSolver.h  lbmFlowUtils.cpp  lbmFlowUtils.h  real_type.h
src/utils/: CMakeLists.txt
src/utils/config/: ConfigMap.cpp
src/utils/config/inih/: INIReader.cpp
src/utils/profiling/: CMakeLists.txt  sycl_profiler_utils.cpp  sycl_profiler_utils.h
src/utils/writeVTK/: CMakeLists.txt  saveVTK.cpp  saveVTK.h
